WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241459
[shrink-to-fit] Incorrect sizing of elements with visually hidden text inside
https://bugs.webkit.org/show_bug.cgi?id=241459
Summary
[shrink-to-fit] Incorrect sizing of elements with visually hidden text inside
Wojciech Maj
Reported
2022-06-09 04:50:51 PDT
Created
attachment 460128
[details]
Offline repro If we have: 1. div with display: inline-block, or 2. div in flexbox container that has a text with visually hidden element inside, this div's auto width is incorrect (unnecessarily small), causing the text to wrap with no reason. Repro:
https://4kpsi4.csb.app/
Interactive repro:
https://codesandbox.io/s/webkit-element-sizing-bug-4kpsi4
This can be reproduced both on macOS Monterey and iOS 15.
Attachments
Offline repro
(1.54 KB, text/html)
2022-06-09 04:50 PDT
,
Wojciech Maj
no flags
Details
Test reduction
(277 bytes, text/html)
2022-06-09 06:17 PDT
,
alan
no flags
Details
Patch
(5.11 KB, patch)
2022-06-11 15:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.98 KB, patch)
2022-06-11 19:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-06-09 06:17:28 PDT
Created
attachment 460130
[details]
Test reduction Apparently the combination of out-of-flow block box + margin offset confuses the preferred with computation for shrink-to-fit content.
alan
Comment 2
2022-06-11 08:28:57 PDT
The margin is mistakenly included twice during line layout, first when the out-of-flow box is placed (static position) and later when the adjacent text content is taken care of.
alan
Comment 3
2022-06-11 15:05:02 PDT
Created
attachment 460183
[details]
Patch
alan
Comment 4
2022-06-11 19:13:41 PDT
Created
attachment 460184
[details]
Patch
EWS
Comment 5
2022-06-12 07:45:30 PDT
Committed
r295478
(
251483@main
): <
https://commits.webkit.org/251483@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460184
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-06-12 07:46:15 PDT
<
rdar://problem/94935961
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug